:construction: 基础功能开发

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -6,7 +6,7 @@
   box-shadow: var(--m78-shadow-1);
 
   &_side {
-    width: 90px;
+    //width: 90px;
     background-color: var(--m78-body-bg);
     z-index: var(--m78-z-index);
     border-right: 1px solid var(--m78-color-border);
