--- a/src/style/func-bar.scss
+++ b/src/style/func-bar.scss
@@ -2,87 +2,52 @@
 @import '@m78/style/sass-vars';
 
 .m78-admin_func-bar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  padding: var(--m78-space-2);
+  width: 201px /* 1px为右边框宽度 */;
+  padding: var(--m78-space-3) var(--m78-space-2);
+  background-color: var(--m78-component-bg);
+  transition: 0.2s;
+  border-right: 1px solid var(--m78-color-border);
+  z-index: var(--m78-z-index);
+
+  &.__fixed {
+    top: 10%;
+    bottom: 10%;
+    border-radius: var(--m78-border-radius);
+    box-shadow: var(--m78-shadow-2-b);
+    border: 1px solid var(--m78-color-border);
+    transform: translateX(0%);
+    z-index: 99999;
+
+    &.__hover {
+      transform: translateX(-92%);
+
+      &:hover {
+        transform: translateX(0%);
+      }
+    }
+  }
 
   &_logo {
-    display: block;
-    margin: var(--m78-space-2) auto 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
     width: 100%;
-    font-size: var(--m78-fs-sm);
-    text-align: center;
+    font-weight: bold;
+    overflow: hidden;
   }
 
   &_logo-img {
-    width: 80%;
+    height: 28px;
+    margin-right: var(--m78-space-2);
   }
 
   &_main {
     flex: 1;
-    //overflow: auto;
-  }
-
-  &_side {
-    flex: 0 0 auto;
-  }
-
-  &_func {
-    position: relative;
-    border-radius: var(--m78-border-radius);
-    padding: var(--m78-space-2) var(--m78-space-1);
-    text-align: center;
-    font-size: 12px;
-    user-select: none;
-    cursor: pointer;
-    line-height: 1.2;
-    margin-bottom: var(--m78-space-1);
-
-    &.__circle {
-      width: 50px;
-      height: 50px;
-      line-height: 50px;
-      border-radius: 50%;
-      margin: var(--m78-space-3) auto var(--m78-space-2);
-      border: 1px solid var(--m78-color-border);
-      background-color: var(--m78-color-bg);
-      padding: 0;
-      font-weight: bold;
-    }
-
-    &.__small {
-      .m78-admin_func-bar_icon {
-        font-size: 14px;
-        margin-bottom: var(--m78-space-1);
-      }
-    }
-
-    @include effect-bg;
-  }
-
-  &_icon {
-    font-size: 20px;
-    margin-bottom: var(--m78-space-2);
-  }
-
-  &_text {
-  }
-
-  &_left-side {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    height: 100%;
-    top: 0;
-    left: 4px;
-    width: 5px;
-    line-height: 1;
-
-    .m78-dot {
-      margin: 0;
-    }
   }
 }
