--- a/src/style/func-list.scss
+++ b/src/style/func-list.scss
@@ -1,5 +1,19 @@
 .func-list {
-  width: 420px;
+
+  .m78-tree {
+    padding: 0 !important;
+    border: none !important;
+  }
+
+  .m78-tree_cont {
+    min-width: 0;
+    @include ellipsis-x;
+  }
+
+  .m78-tree_toolbar {
+    padding-bottom: 0 !important;
+    border-bottom: none !important;
+  }
 
   .m78-tree_toolbar-left {
     display: none;
@@ -11,7 +25,9 @@
   }
 
   .m78-input_wrap {
+    display: flex;
     height: 32px !important;
-    width: 100%;
+    width: 96%;
+    margin: 0 auto;
   }
 }
