--- a/src/style/wine-reset.scss
+++ b/src/style/wine-reset.scss
@@ -27,6 +27,15 @@
     }
   }
 
+  &_header {
+    background-color: var(--m78-component-bg);
+    border-bottom: 1px solid var(--m78-color-border);
+  }
+
+  &_header-content {
+    color: var(--m78-color-primary);
+  }
+
   &_decorate {
     border: 1px solid var(--m78-color-border);
     box-shadow: var(--m78-shadow-1-b);
@@ -37,6 +46,11 @@
   .m78-page-header {
     border: none;
     border-bottom: 1px solid var(--m78-color-border);
+  }
+
+  .m78-page-header_main {
+    padding: var(--m78-space-2) var(--m78-space-3);
+    margin: 0;
   }
 
   &_hide-btn {
