--- a/src/style/widget.scss
+++ b/src/style/widget.scss
@@ -84,10 +84,10 @@
       position: relative;
       display: inline-flex;
       align-items: center;
-      max-width: 120px;
+      //max-width: 120px;
       color: var(--m78-color-primary);
       cursor: pointer;
-      padding: 8px 34px 8px 8px;
+      padding: 8px 28px 8px 8px;
       background-color: var(--m78-color-bg);
       border-radius: var(--m78-border-radius);
       vertical-align: middle;
