--- a/src/style/widget.scss
+++ b/src/style/widget.scss
@@ -79,6 +79,7 @@
     font-weight: 400;
     flex: 1;
     height: 30px !important;
+    border-radius: var(--m78-border-radius);
 
     &-item {
       position: relative;
