--- a/src/style/widget.scss
+++ b/src/style/widget.scss
@@ -188,7 +188,8 @@
     line-height: 1;
     letter-spacing: 0;
 
-    >img, >svg {
+    > img,
+    > svg {
       display: inline-block;
       height: 100%;
     }
